# takanori-cli-plugin-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  setup.cfg
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  main.py
