[metadata]
name = takanori-cli-{{ cookiecutter.usercase_name }}
version = attr: takanori_cli.__version__
description = Takanori commands for my automation tool.
long_description = file: README.md
long_description_content_type = text/markdown
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.author_email }}
maintainer = {{ cookiecutter.author }}
maintainer_email = {{ cookiecutter.author_email }}
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
takanori-cli =
  {{ cookiecutter.project_slug }}.{{ cookiecutter.first_subcommand }} = {{ cookiecutter.module_name }}.main:{{ cookiecutter.first_subcommand }}

[tool:pytest]
testpaths =
  tests
